--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "DanielDeWit\\NovaSingleRecordResource\\NovaSingleRecordResourceServiceProvider"
+                "DanielDeWit\\NovaSingleRecordResource\\Providers\\NovaSingleRecordResourceServiceProvider"
             ]
         }
     },
